# muninn-py

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-docs.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  integration.yml  release.yml
RELEASING/: index.html
ROADMAP/: index.html
api/async_client/: index.html
api/client/: index.html
api/exceptions/: index.html
api/factor/: index.html
api/models/: index.html
api/notebook/: index.html
api/research/: index.html
api/streaming/: index.html
changelog/: index.html
docs/: RELEASING.md  ROADMAP.md  changelog.md  getting-started.md  index.md  notebooks.md
docs/api/: async_client.md  client.md  exceptions.md  factor.md  models.md  notebook.md  research.md  streaming.md
examples/: ic_capacity_research.py
getting-started/: index.html
notebooks/: _build_drift_notebook.py  alpha_backtest_demo.ipynb  feature_drift_monitoring.ipynb  index.html
scripts/: smoke.sh
search/: search_index.json
src/muninn/: __init__.py  _cache.py  _retry.py  _transport.py  _version.py  async_client.py  cli.py  client.py  exceptions.py  factor.py  models.py  notebook.py  pandas_client.py  research.py  streaming.py
src/muninn/dashboard/: __init__.py  app.py
tests/: bench_client.py  conftest.py  test_async_client.py  test_cache.py  test_cli.py  test_client.py  test_factor.py  test_get_panel.py  test_integration.py  test_models.py  test_notebook.py  test_openapi_contract.py  test_pandas_client.py  test_research.py  test_retry.py  test_streaming.py
tests/testdata/: muninn_api_docs_v1.json
