[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "muninn-py"
version = "0.1.0"
description = "Python research SDK for Muninn — event-native market-data feature computation infrastructure."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "The Muninn Authors" },
]
keywords = [
    "muninn",
    "quantitative-research",
    "market-data",
    "streaming",
    "feature-engineering",
    "backtesting",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "numpy>=1.24",
    "polars>=1.0",
    "pandas>=2.0",
    "pydantic>=2.6,<3.0",
    "click>=8.1,<9",
]

[project.scripts]
muninn = "muninn.cli:main"

[project.optional-dependencies]
notebooks = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyarrow>=15.0",
]
cache = [
    "diskcache>=5.6",
]
# Direction A — the Streamlit researcher dashboard. Bundled as an extra so
# default installs stay lean; `pip install 'muninn-py[dashboard]'` pulls in
# Streamlit + Plotly and unlocks `muninn dashboard`.
dashboard = [
    "streamlit>=1.40",
    "plotly>=5.24",
    "pyarrow>=15.0",  # streamlit's recommended interop layer for polars→arrow
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "diskcache>=5.6",
    "pytest-benchmark>=4.0",
    "testcontainers[compose]>=4.0",
]

[project.urls]
Homepage = "https://github.com/lgreene03/muninn-py"
Documentation = "https://lgreene03.github.io/muninn-py"
Repository = "https://github.com/lgreene03/muninn-py"
Issues = "https://github.com/lgreene03/muninn-py/issues"
"Muninn (Java)" = "https://github.com/lgreene03/muninn"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
muninn = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not integration'"
asyncio_mode = "auto"
markers = [
    "integration: full-stack integration tests requiring Docker (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PIE", "SIM", "RET"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
# Type-check under 3.12 semantics. The runtime support floor is still 3.10
# (see requires-python and the CI test matrix), but mypy must parse numpy's
# bundled stubs, which use the PEP 695 `type` statement and therefore require
# a parse target of >=3.12. Checking under 3.12 still validates code that runs
# on 3.10 — 3.10 is a subset — so support coverage is unaffected; tests run on
# the full 3.10–3.13 matrix. Paired with the pinned numpy in the CI Type-check
# step so analysis is reproducible across the matrix.
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
# diskcache 5.x ships no py.typed marker. The cache layer accepts Any
# return types from it deliberately; suppress the missing-stub warning
# so mypy --strict stays green.
module = "diskcache"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The dashboard extra (streamlit + plotly) is optional and CI doesn't
# install it before running mypy. Neither library ships strict stubs
# anyway; silence the missing-import noise so the dashboard module
# can use them naturally.
module = ["streamlit", "streamlit.*", "plotly", "plotly.*"]
ignore_missing_imports = true
